// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users End-to-End Tests when creating a new user account will create a new account and send welcome email 1`] = `
{
  "accountTier": 0,
  "email": "newuser@gmail.com",
  "emailVerified": false,
  "hasPassword": true,
  "id": "a99a1193-3ef4-4816-85ce-e717a42dc99f",
  "isLockedOut": false,
  "memberSince": "2024-01-15T12:40:18.319Z",
  "profile": {
    "bio": "This is a test user.",
    "experienceLevel": "Advanced",
    "location": "Seattle, WA",
    "logBookSharing": "public",
    "memberSince": "2024-01-15T12:40:18.319Z",
    "name": "User McUserface",
    "startedDiving": "2000-01-01",
    "userId": "a99a1193-3ef4-4816-85ce-e717a42dc99f",
    "username": "User.McUserface",
  },
  "role": "user",
  "settings": {
    "depthUnit": "m",
    "pressureUnit": "bar",
    "temperatureUnit": "C",
    "weightUnit": "kg",
  },
  "username": "User.McUserface",
}
`;

exports[`Users End-to-End Tests when creating a new user account will create a new account and send welcome email 2`] = `
UserEntity {
  "accountTier": 0,
  "avatar": null,
  "bio": "This is a test user.",
  "certifications": undefined,
  "customData": null,
  "depthUnit": "m",
  "email": "newuser@gmail.com",
  "emailLowered": "newuser@gmail.com",
  "emailVerificationToken": "oqh6qlk1wQsFvYiGO__KK0ZlQcMc6CW6I08zPbsgLtM",
  "emailVerificationTokenExpiration": 2024-01-17T12:40:18.319Z,
  "emailVerified": false,
  "experienceLevel": "Advanced",
  "friends": undefined,
  "fulltext": undefined,
  "id": "a99a1193-3ef4-4816-85ce-e717a42dc99f",
  "isLockedOut": false,
  "lastLogin": null,
  "lastPasswordChange": null,
  "location": "Seattle, WA",
  "logBookSharing": "public",
  "memberSince": 2024-01-15T12:40:18.319Z,
  "name": "User McUserface",
  "oauth": undefined,
  "passwordHash": "$2b$04$wProYOHv1Qgo9oj1nwDIuObvp7V6K1SSm0Gcp2TSPQPhOqY8RLBRa",
  "passwordResetToken": null,
  "passwordResetTokenExpiration": null,
  "pressureUnit": "bar",
  "role": "user",
  "startedDiving": "2000-01-01",
  "tanks": undefined,
  "temperatureUnit": "C",
  "username": "User.McUserface",
  "usernameLowered": "user.mcuserface",
  "weightUnit": "kg",
}
`;

exports[`Users End-to-End Tests when creating a new user account will create a new account with minimal properties 1`] = `
{
  "accountTier": 0,
  "emailVerified": false,
  "hasPassword": false,
  "id": "a99a1193-3ef4-4816-85ce-e717a42dc99f",
  "isLockedOut": false,
  "memberSince": "2024-01-15T12:40:18.319Z",
  "profile": {
    "logBookSharing": "private",
    "memberSince": "2024-01-15T12:40:18.319Z",
    "userId": "a99a1193-3ef4-4816-85ce-e717a42dc99f",
    "username": "User.McUserface",
  },
  "role": "user",
  "settings": {
    "depthUnit": "m",
    "pressureUnit": "bar",
    "temperatureUnit": "C",
    "weightUnit": "kg",
  },
  "username": "User.McUserface",
}
`;

exports[`Users End-to-End Tests when creating a new user account will create a new account with minimal properties 2`] = `
UserEntity {
  "accountTier": 0,
  "avatar": null,
  "bio": null,
  "certifications": undefined,
  "customData": null,
  "depthUnit": "m",
  "email": null,
  "emailLowered": null,
  "emailVerificationToken": null,
  "emailVerificationTokenExpiration": null,
  "emailVerified": false,
  "experienceLevel": null,
  "friends": undefined,
  "fulltext": undefined,
  "id": "a99a1193-3ef4-4816-85ce-e717a42dc99f",
  "isLockedOut": false,
  "lastLogin": null,
  "lastPasswordChange": null,
  "location": null,
  "logBookSharing": "private",
  "memberSince": 2024-01-15T12:40:18.319Z,
  "name": null,
  "oauth": undefined,
  "passwordHash": null,
  "passwordResetToken": null,
  "passwordResetTokenExpiration": null,
  "pressureUnit": "bar",
  "role": "user",
  "startedDiving": null,
  "tanks": undefined,
  "temperatureUnit": "C",
  "username": "User.McUserface",
  "usernameLowered": "user.mcuserface",
  "weightUnit": "kg",
}
`;

exports[`Users End-to-End Tests when creating a new user account will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_string",
      "message": "Invalid",
      "path": [
        "username",
      ],
      "validation": "regex",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "email",
      ],
      "received": "number",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'user' | 'admin', received 'power_user'",
      "options": [
        "user",
        "admin",
      ],
      "path": [
        "role",
      ],
      "received": "power_user",
    },
  ],
}
`;
